[package]
name = "changes"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/changes"
documentation = "https://docs.rs/changes"
description = "Compute the differences between two states"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"

[dev-dependencies]
